--- a/TeoriaBEM/index.html
+++ b/TeoriaBEM/index.html
@@ -10,11 +10,29 @@
     <h1>BEM</h1>
 
     <section class="cards">
-        <div class="card">
-            <h3>Tarjeta 1</h3>
-            <p>Contenido tarjeta 1</p>
-            <a href="#">cristian.dev</a>
-        </div>
+        <article class="cards__card">
+            <h3 class="card__title">Tarjeta 1</h3>
+            <p class="card__content">Contenido tarjeta 1</p>
+            <a href="#" class="card__link card__link--rojo">cristiandavid.dev</a>
+        </article>
+
+        <article class="cards__card">
+            <h3 class="card__title">Tarjeta 2</h3>
+            <p class="card__content">Contenido tarjeta 1</p>
+            <a href="#" class="card__link">cristiandavid.dev</a>
+        </article>
+
+        <article class="cards__card">
+            <h3 class="card__title">Tarjeta 3</h3>
+            <p class="card__content">Contenido tarjeta 1</p>
+            <a href="#" class="card__link">cristiandavid.dev</a>
+        </article>
+
+        <article class="cards__card">
+            <h3 class="card__title">Tarjeta 4</h3>
+            <p class="card__content">Contenido tarjeta 1</p>
+            <a href="#" class="card__link">cristiandavid.dev</a>
+        </article>
     </section>
 </body>
 </html>
